# sqlscout

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: test.yml
design/: preview.html
src/: App.tsx
src/components/: CommandExplorer.tsx  EditorPane.tsx  FlowDiagram.tsx  StatusBar.tsx  TopBar.tsx
src/data/: commands.ts
src/lib/: ast-to-flow.ts  parser.ts  samples.ts
src/styles/: app.css  tokens.css
tests/e2e/: zed-surfaces.test.ts
zed-extension/: Cargo.toml  README.md  extension.toml  tasks.json
zed-extension/snippets/: sql.json
zed-extension/src/: sqlscout.rs
