[package]
name = "sqlscout"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
path = "src/sqlscout.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.5"

# Required for WSL-UNC builds: cargo cannot create session lock files over
# the 9P bridge ("Unzulässige Funktion" / os error -2147024895). Disabling
# incremental at the profile level overrides Zed's cargo invocation.
[profile.dev]
incremental = false

[profile.release]
incremental = false
